file is created

--- a/Home/index.html
+++ b/Home/index.html
@@ -29,11 +29,11 @@
         <div class="menu">
 
             <ul>
-                <li class="home">Home</li>
+                <a class=home href="file:///C:/Users/Acer/Desktop/monarch/index.html">Home</a>
                 <li>About</li>
                 <li>Services</li>
                 <li>Portfolio</li>
-                <li>Blog</li>
+                <a class="blog" href="http://127.0.0.1:5500/blog/index.html">Blog</a>
                 <li>Contact</li>
             </ul>
 
@@ -188,12 +188,12 @@
         <div>
             <div class="foott">
                 <h3>Navigation </h3> <br>
-                <p class="fo">Home <br><br> Services <br><br> Work <br> <br>About <br> <br>Blog <br><br></p>
+               <div class="you"> <p class="fo">Home <br><br> Services <br><br> Work <br> <br>About <br> <br>Blog <br><br></p>
 
-                <span>Press <br><br> Blog <br><br> Contact <br> <br>Support <br> <br>Privacy <br><br></span>
+                <span class="f">Press <br><br> Blog <br><br> Contact <br> <br>Support <br> <br>Privacy <br><br></span>
 
 <p class="foo">Privacy <br><br> FAQ <br><br> Careers <br> <br>Procedure <br> <br>Team <br><br></p>
-
+</div>
             </div>
         </div>
 
